# crossbeam-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json
contracts/: README.md
contracts/rust/: Cargo.toml  bridge.rs
contracts/solidity/: CrossChainBridge.sol  LiquidityPool.sol
docs/: API_REFERENCE.md  BRIDGE_ARCHITECTURE.md  ORACLE_INTEGRATION.md  QUICK_START.md
examples/: basic-usage.ts  graphql-server.ts
src/: index.ts
src/bridges/: BaseBridge.ts  EthereumBridge.ts  SolanaBridge.ts  XRPLBridge.ts  index.ts
src/core/: CrossbeamSDK.ts  index.ts
src/graphql/: resolvers.ts  schema.ts
src/oracles/: BaseOracle.ts  ChainlinkOracle.ts  index.ts
src/types/: index.ts
src/utils/: index.ts
