[package]
name = "crossbeam-bridge-solana"
version = "1.0.0"
edition = "2021"
description = "Cross-chain bridge smart contract for Solana"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
